Refactor perdu demo into separate HTML/CSS/JS files

--- a/01-introduction/perdu.html
+++ b/01-introduction/perdu.html
@@ -1,1 +1,15 @@
-<html><head><title>Vous Etes Perdu ?</title></head><body><h1>Perdu sur l'Internet ?</h1><h2>Pas de panique, on va vous aider</h2><strong><pre>    * <----- vous &ecirc;tes ici</pre></strong></body></html>
+<html>
+<head>
+    <title>Vous Etes Perdu ?</title>
+    <!-- Décommentez pour ajouter du style (CSS) et du comportement (JS) -->
+    <!-- <link rel="stylesheet" href="perdu.css"> -->
+    <!-- <script src="perdu.js"></script> -->
+</head>
+<body>
+    <h1>Perdu sur l'Internet ?</h1>
+    <h2>Pas de panique, on va vous aider</h2>
+    <strong>
+        <pre>    * <----- vous &ecirc;tes ici</pre>
+    </strong>
+</body>
+</html>
