Update perdu demo: enable CSS/JS, tweak gradient

--- a/01-introduction/perdu.html
+++ b/01-introduction/perdu.html
@@ -1,15 +1,19 @@
 <html>
+
 <head>
     <title>Vous Etes Perdu ?</title>
     <!-- Décommentez pour ajouter du style (CSS) et du comportement (JS) -->
-    <!-- <link rel="stylesheet" href="perdu.css"> -->
-    <!-- <script src="perdu.js"></script> -->
+    <link rel="stylesheet" href="perdu.css">
+    <script src="perdu.js"></script>
 </head>
+
 <body>
-    <h1>Perdu sur l'Internet ?</h1>
+    <h1>Perdu <em>sur</em> l'Internet ?</h1>
     <h2>Pas de panique, on va vous aider</h2>
+    alt="ceci est une image"></img>
     <strong>
         <pre>    * <----- vous &ecirc;tes ici</pre>
     </strong>
 </body>
+
 </html>
